--- a/pos-web/index.html
+++ b/pos-web/index.html
@@ -14,7 +14,7 @@
       </a>
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <a href="#" role="button" class="btn btn-default btn-lg">
+          <a href="page/cart.html" role="button" class="btn btn-default btn-lg">
             <span class ="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
             <span id = "count">3</span>
           </a >
