--- a/pos-web/index.html
+++ b/pos-web/index.html
@@ -16,13 +16,13 @@
         <li>
           <a href="page/cart.html" role="button" class="btn btn-default btn-lg">
             <span class ="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
-            <span id = "cartCount">3</span>
+            <span id = "cartCount"></span>
           </a >
         </li>
         <li>
-          <a href="#" role="button" class="btn btn-default btn-lg" >
+          <a href="page/tradeRecord.html" role="button" class="btn btn-default btn-lg" >
             <span class ="glyphicon glyphicon-list" aria-hidden="true"></span>
-            <span id = "recordCount">4</span>
+            <span id = "recordCount"></span>
           </a >
         </li>
       </ul>
@@ -62,6 +62,6 @@
   <script type="text/javascript" src="js/storage.js"></script>
   <script type="text/javascript" src="js/Item.js"></script>
   <script type="text/javascript" src="js/cart.js"></script>
-  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/loadindex.js"></script>
 </body>
 </html>
