add test to function

--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 
   <!-- include source files here... -->
   <script type="text/javascript" src="pos-web/js/storage.js"></script>
-  <script type="text/javascript" src="pos-web/js/item.js"></script>
+  <script type="text/javascript" src="pos-web/js/Item.js"></script>
+  <script type="text/javascript" src="pos-web/js/cart.js"></script>
 
   <!-- include test files here... -->
   <script type="text/javascript" src="pos-web/test/storageTest.js"></script>
   <script type="text/javascript" src="pos-web/test/itemTest.js"></script>
+  <script type="text/javascript" src="pos-web/js/cartTest.js"></script>
 
 </head>
 
