--- a/pos-web/index.html
+++ b/pos-web/index.html
@@ -60,16 +60,16 @@
     <div id="copy" class="text-left pull-left">
       <span>&copy;Design by Crystalynliu</span>
     </div>
-    <div class="pull-right">
+    <div id = "appraise" class="pull-right">
       <ul class="nav navbar-nav navbar-right">
         <li>
-          <button class="btn btn-default btn-lg">
+          <button name="1"class="btn btn-default btn-lg">
             <span  class ="glyphicon icon-thumbs-up" aria-hidden="true"></span>
             <span id = "star">0</span>
           </button >
         </li>
         <li>
-          <button href="page/tradeRecord.html" role="button" class="btn btn-default btn-lg" >
+          <button name="0" class="btn btn-default btn-lg" >
             <span  class ="glyphicon icon-thumbs-down" aria-hidden="true"></span>
             <span id = "unstar">0</span>
           </button>
